[Task] Melhoria no Tratamento de Exceções